# cinder

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  NOTICE  README.md  SECURITY.md  cinder_spline_debug.txt  docker-compose.yml  lefthook.yml  mise.toml  rustfmt.toml  twap_diff.patch
.github/workflows/: ci.yml  release.yml
crates/phoenix-eternal-types/: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md
crates/phoenix-eternal-types/src/: discriminant.rs  lib.rs  program_ids.rs
crates/phoenix-eternal-types/src/accounts/: active_trader_buffer.rs  global_configuration.rs  global_trader_index.rs  mod.rs  orderbook.rs  perp_asset_map.rs  spline_collection.rs  trader.rs
crates/phoenix-eternal-types/src/events/: market_event.rs  mod.rs  parser.rs
crates/phoenix-eternal-types/src/helpers/: mod.rs
crates/phoenix-eternal-types/src/instructions/: mod.rs
crates/phoenix-eternal-types/src/orderbook/: fifo_order_id.rs  mod.rs  resting_order.rs  types.rs
crates/phoenix-eternal-types/src/quantities/: mod.rs  types.rs
crates/phoenix-eternal-types/src/sokoban/: mod.rs
docs/: AGENTS.md  README.md  SECURITY.md
src/: app.rs  lib.rs  main.rs
src/spline/: config.rs  constants.rs  format.rs  gti.rs  i18n.rs  mod.rs  parse.rs  top_positions.rs
src/spline/poller/: input.rs  mod.rs  submit.rs  tasks.rs  wallet.rs
src/spline/render/: mod.rs  modals.rs  orderbook.rs  trading.rs
src/spline/state/: book.rs  market.rs  mod.rs  orders_view.rs  top_positions_view.rs  tui.rs
src/spline/trading/: balance.rs  input_mode.rs  order_info.rs  order_kind.rs  pending_action.rs  top_position_entry.rs
src/spline/tx/: cancel.rs  compute_budget.rs  confirmation.rs  context.rs  funds.rs  limit_order.rs  market_order.rs  mod.rs
src/tui/: config.rs  constants.rs  format.rs  math.rs  mod.rs  splash.rs  terminal.rs
src/tui/data/: mod.rs  position_leaderboard.rs  spline_book.rs  trader_index.rs
src/tui/i18n/: en.rs  es.rs  mod.rs  ru.rs  zh.rs
src/tui/runtime/: channels.rs  connection.rs  event_loop.rs  keyboard.rs  mod.rs  redraw.rs  submit.rs  twap_scheduler.rs  update_handlers.rs  wallet.rs
src/tui/runtime/input/: amounts.rs  clipboard.rs  forms.rs  market.rs  mod.rs  normal.rs  referral.rs  settings.rs  twap.rs  views.rs
src/tui/runtime/tasks/: balances.rs  connect_flow.rs  l2_book.rs  liquidations.rs  mod.rs  orders.rs  position_leaderboard.rs  spline_bootstrap.rs  tx_context.rs  wallet_stream.rs
src/tui/state/: book.rs  liquidation_feed_view.rs  markers.rs  market.rs  mod.rs  orders_view.rs  positions_view.rs  trade_panel.rs  tui.rs  tui_tests.rs  twap_bots_view.rs  updates.rs
src/tui/trading/: balance.rs  input_mode.rs  mod.rs  order_info.rs  order_kind.rs  pending_action.rs  position_info.rs  side.rs
src/tui/tx/: cancel.rs  compute_budget.rs  confirmation.rs  context.rs  error.rs  flight.rs  funds.rs  isolated_margin.rs  limit_order.rs  market_order.rs  mod.rs  positions.rs  priority_fees.rs  stop_market_order.rs
src/tui/ui/: chart.rs  mod.rs  status.rs
src/tui/ui/modals/: chrome.rs  config.rs  ledger.rs  liquidation_feed.rs  market_selector.rs  mod.rs  orders.rs  position_leaderboard.rs  positions.rs  quit.rs  referral_choice.rs  referral_code.rs  twap.rs  wallet_path.rs
src/tui/ui/orderbook/: mod.rs  table.rs
src/tui/ui/trade_panel/: actions.rs  layout.rs  mod.rs  order_entry.rs  position.rs
