[package]
authors      = ["Cosmic Markets"]
categories   = ["command-line-utilities", "finance", "cryptography::cryptocurrencies"]
description  = "Rust terminal UI for Phoenix perpetuals on Solana"
edition      = "2021"
homepage     = "https://cosmic.markets/phoenix/trade"
keywords     = ["solana", "phoenix", "trading", "tui", "perpetuals"]
license      = "MIT"
name         = "cosmic-cinder"
publish      = true
readme       = "docs/README.md"
repository   = "https://github.com/cosmic-markets/cinder"
rust-version = "1.94"
version      = "0.1.12"

# Keep the on-disk crate ident (`cinder::run`) and CLI binary name decoupled from the
# crates.io package name so existing imports and the published `cinder` command stay stable.
[lib]
name = "cinder"
path = "src/lib.rs"

[[bin]]
name = "cinder"
path = "src/main.rs"

[dependencies]
# Phoenix and all Solana client I/O (`solana-rpc-client`, `solana-pubsub-client`) use the Agave 2.3.x wire stack so
# HTTP RPC and WebSocket subscriptions resolve to one `solana-rpc-client-types` / `solana-commitment-config` graph.
arboard                 = { version = "3.6.1", default-features = false }
bs58                    = "0.5.1"
chrono                  = { version = "0.4.44", default-features = false, features = ["std", "clock"] }
crossterm               = { version = "0.29.0", features = ["event-stream"] }
dotenvy                 = "0.15.7"
futures-util            = { version = "0.3.32", default-features = false, features = ["std"] }
phoenix-eternal-types   = { version = "0.1.1", package = "cosmic-phoenix-eternal-types" }
phoenix-rise            = "0.1.2"
ratatui                 = { version = "0.30.0", default-features = false, features = ["crossterm"] }
# Unify rustls features: tungstenite (via pubsub) uses rustls with no ring/aws-lc-rs; WSS needs a CryptoProvider.
rustls                  = { version = "0.23.40", default-features = false, features = ["ring", "std", "tls12"] }
serde_json              = "1.0.149"
solana-account-decoder-client-types = "=2.3.13"
solana-commitment-config            = "2.2.1"
solana-hash             = "2.3.0"
solana-instruction      = "2.3.3"
solana-keypair          = "2.2.1"
solana-message          = "2.4.0"
solana-pubkey           = "2.4.0"
solana-pubsub-client    = "=2.3.13"
solana-rpc-client       = "=2.3.13"
solana-rpc-client-types = "=2.3.13"
solana-signature        = "2.3.0"
solana-signer           = "2.2.1"
solana-transaction      = { version = "2.2.3", features = ["bincode"] }
solana-transaction-status-client-types = "=2.3.13"
tokio                   = { version = "1.52.2", features = ["rt", "rt-multi-thread", "macros", "time", "sync", "signal"] }
tracing                 = "0.1.44"
tracing-subscriber      = { version = "0.3.23", default-features = false, features = ["std", "fmt"] }

[profile.release]
# Size-focused defaults for production binaries.
codegen-units = 1
debug         = 0
lto           = "thin"
opt-level     = "s"
panic         = "abort"
strip         = true

[profile.release-size]
# Optional "smallest binary" profile (slower build/runtime than release).
codegen-units = 1
inherits      = "release"
lto           = "fat"
opt-level     = "z"
panic         = "abort"
strip         = true
