[package]
authors      = ["Cosmic Markets"]
categories   = ["command-line-utilities", "finance", "cryptography::cryptocurrencies"]
description  = "Rust terminal UI for Phoenix perpetuals on Solana"
edition      = "2021"
homepage     = "https://cinder.trading"
keywords     = ["defi", "phoenix", "trading", "tui", "perpetuals"]
license      = "MIT"
name         = "cosmic-cinder"
publish      = true
readme       = "docs/README.md"
repository   = "https://github.com/cosmic-markets/cinder"
rust-version = "1.96"
version      = "0.1.20"

[lib]
name = "cinder"
path = "src/lib.rs"

[[bin]]
name = "cinder"
path = "src/main.rs"

[dependencies]
arboard                 = { version = "3.6.1", default-features = false }
bs58                    = "0.5"
chrono                  = { version = "0.4", features = ["serde"] }
crossterm               = { version = "0.29.0", features = ["event-stream"] }
dotenvy                 = "0.15.7"
futures-util            = "0.3"
phoenix-eternal-types   = { version = "0.1.2", package = "cosmic-phoenix-eternal-types" }
# Full off-chain SDK bundle (default features: api, ws, sdk, tx-builder).
# Facade modules: phoenix_rise::{accounts, api, core, ix, math, types}.
phoenix-rise            = { version = "=0.3.0", features = ["api", "ws", "sdk", "tx-builder"] }
ratatui                 = { version = "0.30.2", default-features = false, features = ["crossterm"] }
rustls                  = { version = "0.23.41", default-features = false, features = ["ring", "std", "tls12"] }
serde_json              = "1.0"
solana-account-decoder-client-types = "~3.1"
solana-commitment-config            = "~3.1"
solana-hash             = "~3.1"
solana-instruction      = { version = "~3.0", default-features = false, features = ["std"] }
solana-keypair          = "~3.1"
solana-message          = "~3.1"
solana-pubkey           = { version = "~3.0", features = ["borsh", "curve25519", "serde"] }
solana-pubsub-client    = "~3.1"
solana-rpc-client       = "~3.1"
solana-rpc-client-api   = "~3.1"
solana-signature        = "~3.2"
solana-signer           = "~3.0"
solana-transaction      = "~3.1"
solana-transaction-status-client-types = "~3.1"
tokio                   = { version = "1.44", features = [
    "sync",
    "rt-multi-thread",
    "macros",
    "time",
    "test-util",
    "net",
    "signal",
] }
tracing                 = { version = "0.1", features = ["log"] }
tracing-subscriber      = { version = "0.3", features = ["env-filter", "fmt"] }

[profile.release]
# Size-focused defaults for production binaries.
codegen-units = 1
debug         = 0
lto           = "thin"
opt-level     = "s"
panic         = "abort"
strip         = true

[profile.release-size]
# Optional "smallest binary" profile (slower build/runtime than release).
codegen-units = 1
inherits      = "release"
lto           = "fat"
opt-level     = "z"
panic         = "abort"
strip         = true
