[package]
authors      = ["Cosmic Markets"]
categories   = ["cryptography::cryptocurrencies", "api-bindings"]
description  = "Vendored read-only account types for Phoenix Eternal perpetuals"
edition      = "2021"
homepage     = "https://phoenix.trade"
keywords     = ["solana", "phoenix", "perpetuals", "borsh", "accounts"]
license      = "Apache-2.0"
name         = "cosmic-phoenix-eternal-types"
publish      = true
readme       = "README.md"
repository   = "https://github.com/cosmic-markets/cinder"
rust-version = "1.94"
version      = "0.1.1"


[features]
serde = ["dep:serde", "dep:serde-big-array", "solana-pubkey/serde"]
cli = [
    "bs58",
    "clap",
    "dirs-next",
    "futures",
    "serde",
    "serde_json",
    "solana-account-decoder",
    "solana-client",
    "solana-sdk",
    "solana-transaction-status",
    "tokio",
    "tracing-subscriber",
]
geyser = [
    "cli",
    "yellowstone-grpc-client",
    "yellowstone-grpc-proto",
]
default = []

[[bin]]
name = "phoenix-eternal"
path = "src/bin/main.rs"
required-features = ["cli"]

[[bin]]
name = "spline-fill-subscriber"
path = "src/bin/spline_fill_subscriber.rs"
required-features = ["geyser"]

[dependencies]
anyhow = "1.0"
borsh = "0.10"
bytemuck = { version = "1.14", features = ["derive"] }
num-derive = "0.4"
num-traits = "0.2"
sha2 = "0.10"
solana-instruction = "2.3.3"
solana-pubkey = { version = "2.4.0", features = [
    "borsh",
    "bytemuck",
    "curve25519",
] }
static_assertions = "1.1"
tracing = "0.1"

# CLI dependencies (optional)
bs58 = { version = "0.5", optional = true }
futures = { version = "0.3", optional = true }
clap = { version = "4", features = ["derive"], optional = true }
dirs-next = { version = "2.0", optional = true }
serde = { version = "1", features = ["derive"], optional = true }
serde-big-array = { version = "0.5", optional = true }
serde_json = { version = "1", optional = true }
solana-account-decoder = { version = "2.1", optional = true }
solana-client = { version = "2.1", optional = true }
solana-sdk = { version = "2.1", optional = true }
solana-transaction-status = { version = "2.1", optional = true }
tokio = { version = "1", features = ["full"], optional = true }
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
], optional = true }

[target.'cfg(unix)'.dependencies]
yellowstone-grpc-client = { version = "12.1", optional = true }
yellowstone-grpc-proto = { version = "12.1", optional = true }
