[package]
authors      = ["Cosmic Markets"]
categories   = ["cryptography::cryptocurrencies", "api-bindings"]
description  = "Vendored read-only account types for Phoenix Eternal perpetuals"
edition      = "2021"
homepage     = "https://phoenix.trade"
keywords     = ["solana", "phoenix", "perpetuals", "borsh", "accounts"]
license      = "Apache-2.0"
name         = "cosmic-phoenix-eternal-types"
publish      = true
readme       = "README.md"
repository   = "https://github.com/cosmic-markets/cinder"
rust-version = "1.96"
version      = "0.1.2"


[features]
serde = ["dep:serde", "dep:serde-big-array", "solana-pubkey/serde"]
cli = [
    "bs58",
    "clap",
    "dirs-next",
    "futures",
    "serde",
    "serde_json",
    "solana-account-decoder",
    "solana-client",
    "solana-sdk",
    "solana-transaction-status",
    "tokio",
    "tracing-subscriber",
]
geyser = [
    "cli",
    "yellowstone-grpc-client",
    "yellowstone-grpc-proto",
]
default = []

[[bin]]
name = "phoenix-eternal"
path = "src/bin/main.rs"
required-features = ["cli"]

[[bin]]
name = "spline-fill-subscriber"
path = "src/bin/spline_fill_subscriber.rs"
required-features = ["geyser"]

[dependencies]
anyhow = "1.0"
borsh = { version = "1.5", features = ["derive"] }
bytemuck = { version = "1.21", features = ["derive"] }
num-derive = "0.4"
num-traits = "0.2"
sha2 = "0.10"
solana-instruction = { version = "~3.0", default-features = false, features = ["std"] }
solana-pubkey = { version = "~3.0", features = [
    "borsh",
    "bytemuck",
    "curve25519",
    "serde",
] }
static_assertions = "1.1"
tracing = { version = "0.1", features = ["log"] }

# CLI dependencies (optional)
bs58 = { version = "0.5", optional = true }
futures = { version = "0.3", optional = true }
clap = { version = "4.5", features = ["derive"], optional = true }
dirs-next = { version = "2.0", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
serde-big-array = { version = "0.5", optional = true }
serde_json = { version = "1.0", optional = true }
solana-account-decoder = { version = "~3.1", optional = true }
solana-client = { version = "~3.1", optional = true }
solana-sdk = { version = "~3.0", optional = true }
solana-transaction-status = { version = "~3.1", optional = true }
tokio = { version = "1.44", features = [
    "sync",
    "rt-multi-thread",
    "macros",
    "time",
    "test-util",
    "net",
    "signal",
], optional = true }
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
], optional = true }

[target.'cfg(unix)'.dependencies]
yellowstone-grpc-client = { version = "12.1", optional = true }
yellowstone-grpc-proto = { version = "12.1", optional = true }
